Rename package from `P` to `pn`.
Npm says: "Error: forbidden New packages must have all-lowercase names: P"

Oh, well.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "P",
+  "name": "pn",
   "version": "0.0.0",
   "description": "Promisify the node standard library.",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/cscott/node-P"
+    "url": "git://github.com/cscott/node-pn"
   },
   "keywords": [
     "promise", "node"
@@ -16,6 +16,6 @@
   "author": "C. Scott Ananian",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cscott/node-P/issues"
+    "url": "https://github.com/cscott/node-pn/issues"
   }
 }
