--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "Promisify the node standard library.",
   "scripts": {
     "generate": "scripts/generate.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/cscott/node-pn"
   },
   "keywords": [
-    "promise", "node"
+    "promise",
+    "node"
   ],
   "author": "C. Scott Ananian",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cscott/node-pn/issues"
+  },
+  "devDependencies": {
+    "es6-shim": "~0.21.1",
+    "mocha": "~2.0.1"
   }
 }
