--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "es6-shim": "~0.21.1",
-    "mocha": "~2.0.1"
+    "mocha": "~2.0.1",
+    "prfun": "~2.1.1"
   }
 }
